--- a/sector_construccion.html
+++ b/sector_construccion.html
@@ -2622,10 +2622,8 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<div id="indicadores" class="section level1">
-<h1>Indicadores</h1>
-<div id="indicadores-macroeconómicos-de-jalisco" class="section level3 no-title" data-height="100">
-<h3 class="no-title" data-height="100">Indicadores macroeconómicos de Jalisco</h3>
+<div id="sector-construcción" class="section level1">
+<h1>Sector construcción</h1>
 <p>Info</p>
 <p style="font-size: 9pt;">
 ICCJ: Indicador de Confianza del Consumidor Jalisciense
@@ -2636,7 +2634,6 @@ IEE: Índice de Expectativas Empresariales
 <p style="font-size: 9pt;">
 PIB: Producto Interno Bruto
 </p>
-</div>
 <div id="consulta-más-información-del-sector" class="section level3">
 <h3>Consulta más información del sector</h3>
 <p style="text-align: justify;">
@@ -2649,20 +2646,15 @@ PIB: Producto Interno Bruto
 <div id="i-cluster" class="section level3">
 <h3>i-Cluster</h3>
 <p style="text-align: justify;">
-<span style="font-size: 11pt;">La Plataforma I-Clúster Jalisco es una herramienta que permite buscar y analizar concentraciones geográficas de empresas interconectadas. Su objetivo es integrar datos de distintas fuentes de información para el análisis espacial y transversal para consolidar la base de proveeduría de diversos sectores económicos, con el propósito de promover el uso de la información geográfica, estadística y económica para difundir e impulsar la competitividad de las empresas jaliscienses.</span>
+<span style="font-size: 11pt;">La Plataforma I-Clúster Jalisco es una herramienta que permite buscar y analizar concentraciones geográficas de empresas interconectadas.</span>
 </p>
 <p style="text-align: center;">
 <span style="font-size: 11pt;"><a href="https://iieg.gob.mx/ns/?page_id=21991" target="_blank">Plataforma I-Clúster </a></span>
 </p>
 </div>
 </div>
-<div id="cotntacto" class="section level1">
-<h1>Cotntacto</h1>
-<div id="info" class="section level3 no-title no-padding">
-<h3 class="no-title no-padding">Info</h3>
-</div>
-<div id="contacto" class="section level3 no-title no-padding">
-<h3 class="no-title no-padding">Contacto</h3>
+<div id="contacto" class="section level1">
+<h1>Contacto</h1>
 <p style="text-align: center;">
 <span style="font-size: 10pt;">INSTITUTO DE INFORMACIÓN ESTADÍSTICA Y GEOGRÁFICA DE JALISCO</span>
 </p>
@@ -2675,7 +2667,6 @@ PIB: Producto Interno Bruto
 <p style="text-align: center;">
 <span style="font-size: 10pt;"><a href="mailto:contacto@iieg.gob.mx" class="email">contacto@iieg.gob.mx</a></span>
 </p>
-</div>
 </div>
 
 </div>
