--- a/sector_construccion.html
+++ b/sector_construccion.html
@@ -2622,17 +2622,17 @@ window.FlexDashboardComponents.push({
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
-<div id="sector-construcción" class="section level1">
-<h1>Sector construcción</h1>
+<div id="indicadores" class="section level1">
+<h1>Indicadores</h1>
 <p>Info</p>
-<p style="font-size: 9pt;">
-ICCJ: Indicador de Confianza del Consumidor Jalisciense
-</p>
-<p style="font-size: 9pt;">
-IEE: Índice de Expectativas Empresariales
-</p>
-<p style="font-size: 9pt;">
+<p style="font-size: 8pt;">
 PIB: Producto Interno Bruto
+</p>
+<p style="font-size: 8pt;">
+ITAEE: Indicador Trimestral de la Actividad Económica Estatal
+</p>
+<p style="font-size: 8pt;">
+IMSS: Producto Interno Bruto
 </p>
 <div id="consulta-más-información-del-sector" class="section level3">
 <h3>Consulta más información del sector</h3>
@@ -2652,6 +2652,9 @@ PIB: Producto Interno Bruto
 <span style="font-size: 10pt;"><a href="https://iieg.gob.mx/ns/?page_id=21991" target="_blank">Plataforma I-Clúster </a></span>
 </p>
 </div>
+</div>
+<div id="glosario" class="section level1">
+<h1>Glosario</h1>
 </div>
 <div id="contacto" class="section level1">
 <h1>Contacto</h1>
