--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2997,8 +2997,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1>AMG</h1>
-<div id="amg-30-abril-2021" class="section level3" data-height="100">
-<h3>AMG, 30 abril, 2021</h3>
+<div id="amg-01-mayo-2021" class="section level3" data-height="100">
+<h3>AMG, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3022,7 +3022,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.37
+21.38
 </td>
 </tr>
 <tr>
@@ -3033,7 +3033,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.35
+22.36
 </td>
 </tr>
 <tr>
@@ -3044,18 +3044,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.55
+20.57
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1>El Salto</h1>
-<div id="el-salto-30-abril-2021" class="section level3" data-height="100">
-<h3>El Salto, 30 abril, 2021</h3>
+<div id="el-salto-01-mayo-2021" class="section level3" data-height="100">
+<h3>El Salto, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3079,7 +3079,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.44
+21.46
 </td>
 </tr>
 <tr>
@@ -3090,7 +3090,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.37
+22.38
 </td>
 </tr>
 <tr>
@@ -3101,18 +3101,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.50
+20.52
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1>Guadalajara</h1>
-<div id="guadalajara-30-abril-2021" class="section level3" data-height="100">
-<h3>Guadalajara, 30 abril, 2021</h3>
+<div id="guadalajara-01-mayo-2021" class="section level3" data-height="100">
+<h3>Guadalajara, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3158,18 +3158,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.59
+20.60
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlajomulco</h1>
-<div id="tlajomulco-30-abril-2021" class="section level3" data-height="100">
-<h3>Tlajomulco, 30 abril, 2021</h3>
+<div id="tlajomulco-01-mayo-2021" class="section level3" data-height="100">
+<h3>Tlajomulco, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3193,7 +3193,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.20
+21.22
 </td>
 </tr>
 <tr>
@@ -3204,7 +3204,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.17
+22.19
 </td>
 </tr>
 <tr>
@@ -3215,18 +3215,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.34
+20.36
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tlaquepaque</h1>
-<div id="tlaquepaque-30-abril-2021" class="section level3" data-height="100">
-<h3>Tlaquepaque, 30 abril, 2021</h3>
+<div id="tlaquepaque-01-mayo-2021" class="section level3" data-height="100">
+<h3>Tlaquepaque, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3250,7 +3250,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.31
+21.32
 </td>
 </tr>
 <tr>
@@ -3261,7 +3261,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.23
+22.24
 </td>
 </tr>
 <tr>
@@ -3272,18 +3272,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.49
+20.50
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1>Tonalá</h1>
-<div id="tonalá-30-abril-2021" class="section level3" data-height="100">
-<h3>Tonalá, 30 abril, 2021</h3>
+<div id="tonalá-01-mayo-2021" class="section level3" data-height="100">
+<h3>Tonalá, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3307,7 +3307,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.34
+21.35
 </td>
 </tr>
 <tr>
@@ -3318,7 +3318,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.30
+22.32
 </td>
 </tr>
 <tr>
@@ -3329,18 +3329,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.52
+20.53
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1>Zapopan</h1>
-<div id="zapopan-30-abril-2021" class="section level3" data-height="100">
-<h3>Zapopan, 30 abril, 2021</h3>
+<div id="zapopan-01-mayo-2021" class="section level3" data-height="100">
+<h3>Zapopan, 01 mayo, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3386,12 +3386,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.70
+20.71
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-04-30 06:30:10</p>
+<p>Última actualización: 2021-05-01 06:30:26</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
