--- a/indicadores_macroeconomicos_tabla.html
+++ b/indicadores_macroeconomicos_tabla.html
@@ -2755,13 +2755,13 @@ IEE: Índice de Expectativas Empresariales
 PIB: Producto Interno Bruto
 </p>
 <p style="font-size: 9pt;">
-Trabajadores asegurados en el IMSS
+Empleos: Trabajadores asegurados en el IMSS
 </p>
 <p style="font-size: 9pt;">
 INPC: Índice Nacional de Precios al Consumidor
 </p>
 <p style="font-size: 9pt;">
-Nota: Variacion respecto al mismo periodo del año anterior
+Nota: Variación respecto al mismo periodo del año anterior
 </p>
 </div>
 </div>
