--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 agosto, 2021</h3>
+<div id="amg-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.39
+21.40
 </td>
 </tr>
 <tr>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.52
+22.53
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.34
+20.37
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 agosto, 2021</h3>
+<div id="el-salto-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.35
+20.36
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 agosto, 2021</h3>
+<div id="guadalajara-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2798,7 +2798,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.51
+21.52
 </td>
 </tr>
 <tr>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.54
+22.55
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.44
+20.47
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 agosto, 2021</h3>
+<div id="tlajomulco-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2855,7 +2855,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.23
+21.22
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.12
+20.13
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 agosto, 2021</h3>
+<div id="tlaquepaque-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2912,7 +2912,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.24
+21.25
 </td>
 </tr>
 <tr>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.49
+22.46
 </td>
 </tr>
 <tr>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.27
+20.28
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 agosto, 2021</h3>
+<div id="tonalá-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2969,7 +2969,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.55
+21.56
 </td>
 </tr>
 <tr>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.24
+20.29
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-agosto-2021" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 agosto, 2021</h3>
+<div id="zapopan-01-septiembre-2021" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 septiembre, 2021</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3026,7 +3026,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.41
+21.42
 </td>
 </tr>
 <tr>
@@ -3037,7 +3037,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.62
+22.63
 </td>
 </tr>
 <tr>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.41
+20.46
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-08-31 06:30:28</p>
+<p>Última actualización: 2021-09-01 06:42:10</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
