--- a/indicadores_macroeconomicos_tabla.html
+++ b/indicadores_macroeconomicos_tabla.html
@@ -2712,13 +2712,13 @@ IEE
 PIB
 </td>
 <td style="text-align:right;">
-1,217,549.85
+1,125,369.55
 </td>
 <td style="text-align:right;">
-<svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
-<path d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"></path>
+<svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;">
+<path d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"></path>
 </svg>
-0.78%
+-7.52%
 </td>
 </tr>
 <tr>
@@ -2729,13 +2729,13 @@ PIB
 INPC
 </td>
 <td style="text-align:right;">
-116.30
+116.96
 </td>
 <td style="text-align:right;">
 <svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
 <path d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"></path>
 </svg>
-6.90%
+7.62%
 </td>
 </tr>
 <tr>
@@ -2746,13 +2746,13 @@ INPC
 Empleos
 </td>
 <td style="text-align:right;">
-1,858,235.00
+1,873,476.00
 </td>
 <td style="text-align:right;">
 <svg aria-hidden="true" role="img" viewbox="0 0 448 512" style="height:1em;width:0.88em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
 <path d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"></path>
 </svg>
-3.91%
+3.78%
 </td>
 </tr>
 </tbody>
@@ -2836,7 +2836,7 @@ IIEG
 PIB
 </td>
 <td style="text-align:center;">
-2019
+2020
 </td>
 <td style="text-align:center;">
 Millones de pesos constantes, precios de 2013.
@@ -2850,7 +2850,7 @@ INEGI
 INPC
 </td>
 <td style="text-align:center;">
-10/01/2021
+11/01/2021
 </td>
 <td style="text-align:center;">
 Índice, 2a. quincena julio 2018=100.
@@ -2864,7 +2864,7 @@ INEGI
 Empleos
 </td>
 <td style="text-align:center;">
-10/01/2021
+11/01/2021
 </td>
 <td style="text-align:center;">
 Trabajadores registrados en el IMSS
