--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 diciembre, 2021</h3>
+<div id="amg-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.69
+21.71
 </td>
 </tr>
 <tr>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.03
+23.07
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.82
+20.85
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 diciembre, 2021</h3>
+<div id="el-salto-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.77
+20.80
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 diciembre, 2021</h3>
+<div id="guadalajara-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2798,7 +2798,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.78
+21.82
 </td>
 </tr>
 <tr>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.06
+23.11
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.86
+20.90
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 diciembre, 2021</h3>
+<div id="tlajomulco-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2855,7 +2855,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.47
+21.51
 </td>
 </tr>
 <tr>
@@ -2866,7 +2866,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.88
+22.92
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.56
+20.61
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 diciembre, 2021</h3>
+<div id="tlaquepaque-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2912,7 +2912,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.48
+21.50
 </td>
 </tr>
 <tr>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.97
+23.03
 </td>
 </tr>
 <tr>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.67
+20.70
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 diciembre, 2021</h3>
+<div id="tonalá-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2969,7 +2969,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.83
+21.84
 </td>
 </tr>
 <tr>
@@ -2980,7 +2980,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-22.94
+22.96
 </td>
 </tr>
 <tr>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.86
+20.91
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-diciembre-2021" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 diciembre, 2021</h3>
+<div id="zapopan-01-enero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 enero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3026,7 +3026,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.81
+21.82
 </td>
 </tr>
 <tr>
@@ -3037,7 +3037,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.16
+23.19
 </td>
 </tr>
 <tr>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.99
+21.01
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2021-12-31 06:30:13</p>
+<p>Última actualización: 2022-01-01 06:30:29</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
