--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 enero, 2022</h3>
+<div id="amg-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.95
+21.96
 </td>
 </tr>
 <tr>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.29
+23.30
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.01
+21.02
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:25</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 enero, 2022</h3>
+<div id="el-salto-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2741,7 +2741,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.17
+22.23
 </td>
 </tr>
 <tr>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.03
+21.04
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:25</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 enero, 2022</h3>
+<div id="guadalajara-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.32
+23.34
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.08
+21.09
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:25</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 enero, 2022</h3>
+<div id="tlajomulco-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2855,7 +2855,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.78
+21.79
 </td>
 </tr>
 <tr>
@@ -2866,7 +2866,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.17
+23.18
 </td>
 </tr>
 <tr>
@@ -2882,13 +2882,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:25</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 enero, 2022</h3>
+<div id="tlaquepaque-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2912,7 +2912,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-21.76
+21.77
 </td>
 </tr>
 <tr>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.20
+23.23
 </td>
 </tr>
 <tr>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.90
+20.91
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:26</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 enero, 2022</h3>
+<div id="tonalá-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2980,7 +2980,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.11
+23.12
 </td>
 </tr>
 <tr>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-20.98
+20.97
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:26</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-enero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 enero, 2022</h3>
+<div id="zapopan-01-febrero-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 febrero, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3026,7 +3026,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.08
+22.07
 </td>
 </tr>
 <tr>
@@ -3053,7 +3053,7 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-01-31 06:30:26</p>
+<p>Última actualización: 2022-02-01 06:30:11</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
