--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 28 febrero, 2022</h3>
+<div id="amg-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2684,7 +2684,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.15
+22.17
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.24
+21.26
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 28 febrero, 2022</h3>
+<div id="el-salto-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2752,7 +2752,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.47
+23.48
 </td>
 </tr>
 <tr>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.23
+21.26
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 28 febrero, 2022</h3>
+<div id="guadalajara-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2798,7 +2798,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.15
+22.16
 </td>
 </tr>
 <tr>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.52
+23.53
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.25
+21.28
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 28 febrero, 2022</h3>
+<div id="tlajomulco-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2882,13 +2882,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 28 febrero, 2022</h3>
+<div id="tlaquepaque-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2912,7 +2912,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.01
+22.02
 </td>
 </tr>
 <tr>
@@ -2923,64 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.43
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
-<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
-</svg>
-Regular
-</td>
-<td style="text-align:right;">
-21.21
-</td>
-</tr>
-</tbody>
-</table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
-</div>
-</div>
-<div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
-<h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 28 febrero, 2022</h3>
-<div class="knitr-options" data-fig-width="576" data-fig-height="460">
-
-</div>
-<table class="table table-striped table-condensed table-responsive" style="margin-left: auto; margin-right: auto;">
-<thead>
-<tr>
-<th style="text-align:left;">
-Combustible
-</th>
-<th style="text-align:right;">
-Precio promedio
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:black;overflow:visible;position:relative;">
-<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
-</svg>
-Diesel
-</td>
-<td style="text-align:right;">
-22.21
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;">
-<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
-</svg>
-Premiun
-</td>
-<td style="text-align:right;">
-23.30
+23.45
 </td>
 </tr>
 <tr>
@@ -2996,13 +2939,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
-<div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
-<h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-28-febrero-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 28 febrero, 2022</h3>
+<div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
+<h1 data-navmenu="Selecciona una región">Tonalá</h1>
+<div id="tonalá-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 marzo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3026,7 +2969,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-22.25
+22.27
 </td>
 </tr>
 <tr>
@@ -3037,7 +2980,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-23.66
+23.31
 </td>
 </tr>
 <tr>
@@ -3048,12 +2991,69 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-21.39
+21.23
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-02-28 06:30:13</p>
+<p>Última actualización: 2022-03-01 06:30:15</p>
+</div>
+</div>
+<div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
+<h1 data-navmenu="Selecciona una región">Zapopan</h1>
+<div id="zapopan-01-marzo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 marzo, 2022</h3>
+<div class="knitr-options" data-fig-width="576" data-fig-height="460">
+
+</div>
+<table class="table table-striped table-condensed table-responsive" style="margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+Combustible
+</th>
+<th style="text-align:right;">
+Precio promedio
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:black;overflow:visible;position:relative;">
+<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
+</svg>
+Diesel
+</td>
+<td style="text-align:right;">
+22.28
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:red;overflow:visible;position:relative;">
+<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
+</svg>
+Premiun
+</td>
+<td style="text-align:right;">
+23.67
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<svg aria-hidden="true" role="img" viewbox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:green;overflow:visible;position:relative;">
+<path d="M336 448H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h320c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm157.2-340.7l-81-81c-6.2-6.2-16.4-6.2-22.6 0l-11.3 11.3c-6.2 6.2-6.2 16.4 0 22.6L416 97.9V160c0 28.1 20.9 51.3 48 55.2V376c0 13.2-10.8 24-24 24s-24-10.8-24-24v-32c0-48.6-39.4-88-88-88h-8V64c0-35.3-28.7-64-64-64H96C60.7 0 32 28.7 32 64v352h288V304h8c22.1 0 40 17.9 40 40v27.8c0 37.7 27 72 64.5 75.9 43 4.3 79.5-29.5 79.5-71.7V152.6c0-17-6.8-33.3-18.8-45.3zM256 192H96V64h160v128z"></path>
+</svg>
+Regular
+</td>
+<td style="text-align:right;">
+21.40
+</td>
+</tr>
+</tbody>
+</table>
+<p>Última actualización: 2022-03-01 06:30:15</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
