--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 30 abril, 2022</h3>
+<div id="amg-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2711,13 +2711,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 30 abril, 2022</h3>
+<div id="el-salto-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2768,13 +2768,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 30 abril, 2022</h3>
+<div id="guadalajara-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2825,13 +2825,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 30 abril, 2022</h3>
+<div id="tlajomulco-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2882,13 +2882,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 30 abril, 2022</h3>
+<div id="tlaquepaque-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2939,13 +2939,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 30 abril, 2022</h3>
+<div id="tonalá-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2996,13 +2996,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-30-abril-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 30 abril, 2022</h3>
+<div id="zapopan-01-mayo-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 mayo, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3053,7 +3053,7 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-04-30 06:30:13</p>
+<p>Última actualización: 2022-05-01 06:30:49</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
