--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 julio, 2022</h3>
+<div id="amg-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2695,7 +2695,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.78
+24.76
 </td>
 </tr>
 <tr>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.49
+22.48
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 julio, 2022</h3>
+<div id="el-salto-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2752,7 +2752,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.74
+24.63
 </td>
 </tr>
 <tr>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.54
+22.45
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 julio, 2022</h3>
+<div id="guadalajara-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2798,7 +2798,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.54
+23.55
 </td>
 </tr>
 <tr>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.84
+24.83
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.52
+22.51
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 julio, 2022</h3>
+<div id="tlajomulco-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2866,7 +2866,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.71
+24.70
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.34
+22.33
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 julio, 2022</h3>
+<div id="tlaquepaque-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2923,7 +2923,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.74
+24.68
 </td>
 </tr>
 <tr>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.40
+22.36
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 julio, 2022</h3>
+<div id="tonalá-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2996,13 +2996,13 @@ Regular
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-julio-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 julio, 2022</h3>
+<div id="zapopan-01-agosto-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 agosto, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.62
+22.63
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-07-31 06:31:39</p>
+<p>Última actualización: 2022-08-01 06:30:14</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
