--- a/precios_combustible.html
+++ b/precios_combustible.html
@@ -2659,8 +2659,8 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="amg" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">AMG</h1>
-<div id="amg-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">AMG, 31 agosto, 2022</h3>
+<div id="amg-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">AMG, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2706,18 +2706,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.29
+22.26
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:19</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="el-salto" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">El Salto</h1>
-<div id="el-salto-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">El Salto, 31 agosto, 2022</h3>
+<div id="el-salto-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">El Salto, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2752,7 +2752,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.70
+24.75
 </td>
 </tr>
 <tr>
@@ -2763,18 +2763,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.42
+22.34
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:22</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="guadalajara" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Guadalajara</h1>
-<div id="guadalajara-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">Guadalajara, 31 agosto, 2022</h3>
+<div id="guadalajara-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Guadalajara, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2809,7 +2809,7 @@ Diesel
 Premiun
 </td>
 <td style="text-align:right;">
-24.84
+24.82
 </td>
 </tr>
 <tr>
@@ -2820,18 +2820,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.35
+22.33
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:25</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="tlajomulco" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlajomulco</h1>
-<div id="tlajomulco-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlajomulco, 31 agosto, 2022</h3>
+<div id="tlajomulco-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlajomulco, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2855,7 +2855,7 @@ Precio promedio
 Diesel
 </td>
 <td style="text-align:right;">
-23.27
+23.28
 </td>
 </tr>
 <tr>
@@ -2877,18 +2877,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.11
+22.09
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:27</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="tlaquepaque" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tlaquepaque</h1>
-<div id="tlaquepaque-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tlaquepaque, 31 agosto, 2022</h3>
+<div id="tlaquepaque-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tlaquepaque, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2934,18 +2934,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.15
+22.12
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:30</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="tonalá" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Tonalá</h1>
-<div id="tonalá-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">Tonalá, 31 agosto, 2022</h3>
+<div id="tonalá-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Tonalá, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -2991,18 +2991,18 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.19
+22.17
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:32</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="zapopan" class="section level1" data-navmenu="Selecciona una región">
 <h1 data-navmenu="Selecciona una región">Zapopan</h1>
-<div id="zapopan-31-agosto-2022" class="section level3" data-height="100">
-<h3 data-height="100">Zapopan, 31 agosto, 2022</h3>
+<div id="zapopan-01-septiembre-2022" class="section level3" data-height="100">
+<h3 data-height="100">Zapopan, 01 septiembre, 2022</h3>
 <div class="knitr-options" data-fig-width="576" data-fig-height="460">
 
 </div>
@@ -3048,12 +3048,12 @@ Premiun
 Regular
 </td>
 <td style="text-align:right;">
-22.40
+22.38
 </td>
 </tr>
 </tbody>
 </table>
-<p>Última actualización: 2022-08-31 06:39:35</p>
+<p>Última actualización: 2022-09-01 06:30:13</p>
 </div>
 </div>
 <div id="saber-más" class="section level1">
